<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/sidemenu_bg"
        android:orientation="vertical">


        <ScrollView
            android:paddingBottom="30dp"
            android:paddingTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/name_bg"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/user_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/name_icon" />
                </LinearLayout>

                <TextView
                    android:id="@+id/user_name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:lines="1"
                    android:layout_marginBottom="5dp"
                    android:singleLine="true"
                    android:text="Mohamed Sayed"
                    android:textColor="@color/white"
                     />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@color/colorAccent" />

                <LinearLayout
                    android:id="@+id/about_us_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/about_us_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/about_us" />

                    <TextView
                        android:id="@+id/about_us_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:lines="1"
                        android:text="@string/str_side_menu_about_us_txt"
                        android:textColor="@color/white"
                         />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/our_services_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/our_services_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/our_services" />

                    <TextView
                        android:id="@+id/our_services_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:text="@string/str_side_menu_our_services_txt"
                        android:textColor="@color/white"
                         />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/know_your_doctor_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/know_your_doctor_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/know_your_doctor" />

                    <TextView
                        android:id="@+id/know_your_doctor_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:lines="1"
                        android:text="@string/str_side_menu_know_your_doctor_txt"
                        android:textColor="@color/white"
                         />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/befor_and_after_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/befor_and_after_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/befor_and_after" />

                    <TextView
                        android:id="@+id/befor_and_after_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:text="@string/str_side_menu_befor_anf_after_txt"
                        android:textColor="@color/white"
                         />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notification_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/notification_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/messages_side_menu" />

                    <TextView
                        android:id="@+id/notification_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:text="@string/str_messages_txt"
                        android:textColor="@color/white"
                         />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/booking_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/booking_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/booking" />

                    <TextView
                        android:id="@+id/booking_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str_side_menu_booking_txt"
                        android:textColor="@color/white"
                         />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/events_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/events_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/side_menu_events" />

                    <TextView
                        android:id="@+id/events_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str_side_menu_events_txt"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/setting_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/setting_side_menu" />

                    <TextView
                        android:id="@+id/setting_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str_side_menu_setting_txt"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logout_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/logout_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/logout" />

                    <TextView
                        android:id="@+id/logout_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str_side_menu_logout_txt"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
