<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background">



    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_remember_me"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/login_edit_text_padding"
            android:layout_marginStart="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_edit_text_linear"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:background="@mipmap/login"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/str_login_button_enter_txt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/def_medium_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remember_me" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/email_edit_text_linear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/login_edit_text_padding"
            android:layout_marginStart="@dimen/login_edit_text_padding"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            android:background="@drawable/rounded_corner_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" >


            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:src="@mipmap/username_icon" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimary" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:hint="@string/str_signup_user_name_txt"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_edit_text_linear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/login_edit_text_padding"
            android:layout_marginStart="@dimen/login_edit_text_padding"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_corner_bg"
            android:drawableLeft="@mipmap/password_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" >

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:src="@mipmap/password_icon" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimary" />

            <EditText
                android:id="@+id/passport_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:ems="20"
                android:hint="@string/str_login_id_hint_txt"
                android:inputType="textPassword"
                android:gravity="start|center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_edit_text_linear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/login_edit_text_padding"
            android:layout_marginStart="@dimen/login_edit_text_padding"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:background="@drawable/rounded_corner_bg"
            android:drawableLeft="@mipmap/password_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text_linear" >

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:src="@mipmap/password_icon" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimary" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:ems="20"
                android:hint="@string/str_login_password_hint_txt"
                android:inputType="textPassword"
                android:gravity="start|center_vertical" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/create_account_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton">

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>